AC-24 Создать UserBundle

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+araneum_user:
+    resource: "@AraneumUserBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 araneum_main:
     resource: "@AraneumMainBundle/Controller/"
     type:     annotation
