--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "knplabs/rad-bundle": "^2.7"
+        "knplabs/rad-bundle": "^2.7",
+        "friendsofsymfony/user-bundle": "~1.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
