--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -8,3 +8,11 @@ araneum_main:
     type:     annotation
     prefix:   /
 
+admin:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
