--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -84,4 +84,8 @@ swiftmailer:
 fos_user:
     db_driver: orm
     firewall_name: main
-    user_class: Araneum\Bundle\UserBundle\Entity\User    
+    user_class: Araneum\Bundle\UserBundle\Entity\User
+
+accelerator_cache:
+    host: %domain%
+    web_dir: %kernel.root_dir%/../web
