--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -1,16 +1,12 @@
 imports:
-    - { resource: config_dev.yml }
+    - { resource: config_prod.yml }
 
 framework:
-    test: ~
-    session:
-        storage_id: session.storage.mock_file
-    profiler:
-        collect: false
+    profiler: { only_exceptions: false }
 
-web_profiler:
-    toolbar: false
-    intercept_redirects: false
+doctrine:
+   dbal:
+       logging: "%kernel.debug%"
 
 swiftmailer:
     disable_delivery: true
