--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -17,5 +17,7 @@ parameters:
     mailer_encryption: ssl
     mailer_auth_mode:  login
 
+    domain: http://core.mc.araneum.dev
+
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
