--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -10,4 +10,4 @@ araneum_locale:
     resource: routing_with_locale.yml
     defaults: {_locale: en}
     requirements:
-        _locale: en|ru
+        _locale: %locales%
