--- a/src/Araneum/Bundle/MainBundle/Resources/config/admin.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/admin.yml
@@ -1,8 +1,8 @@
 services:
-    sonata.admin.post:
+    sonata.admin.locale:
         class: Araneum\Bundle\MainBundle\Admin\LocaleAdmin
         tags:
-            - { name: sonata.admin, manager_type: orm, group: "Content", label: "Post" }
+            - { name: sonata.admin, manager_type: orm, group: "Locale", label: "Locale" }
         arguments:
             - ~
             - Araneum\Bundle\MainBundle\Entity\Locale
