--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "knplabs/rad-bundle": "^2.7",
         "friendsofsymfony/user-bundle": "~1.3",
         "sonata-project/admin-bundle": "^2.3",
-        "sonata-project/doctrine-orm-admin-bundle": "^2.3"
+        "sonata-project/doctrine-orm-admin-bundle": "^2.3",
         "doctrine/doctrine-fixtures-bundle": "^2.2",
         "smart-core/accelerator-cache-bundle": "^1.0"
     },
