--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -88,8 +88,8 @@ fos_user:
 
 accelerator_cache:
     host: %domain%
-    web_dir: %kernel.root_dir%/../web    user_class: Araneum\Bundle\UserBundle\Entity\User 
-       
+    web_dir: %kernel.root_dir%/../web
+
 sonata_block:
     default_contexts: [cms]
     blocks:
