--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,7 +2,6 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: services.yml }
-    - { resource: @AraneumMainBundle/Resources/config/admin.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
@@ -89,9 +88,12 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: Araneum\Bundle\UserBundle\Entity\User 
-       
+
 sonata_block:
     default_contexts: [cms]
     blocks:
         sonata.admin.block.admin_list:
             contexts:   [admin]
+        sonata.block.service.connection:
+        sonata.block.service.cluster:
+
