AC-34 Админ панель для Connection. Add test connection button. Add validation. Check config.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -91,7 +91,8 @@ fos_user:
 
 accelerator_cache:
     host: %domain%
-    web_dir: %kernel.root_dir%/../web    user_class: Araneum\Bundle\UserBundle\Entity\User 
+    web_dir: %kernel.root_dir%/../web
+    user_class: Araneum\Bundle\UserBundle\Entity\User
        
 sonata_block:
     default_contexts: [cms]
