--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -91,8 +91,7 @@ fos_user:
 
 accelerator_cache:
     host: %domain%
-    web_dir: %kernel.root_dir%/../web
-    user_class: Araneum\Bundle\UserBundle\Entity\User
+    web_dir: %kernel.root_dir%/../web    user_class: Araneum\Bundle\UserBundle\Entity\User
        
 sonata_block:
     default_contexts: [cms]
