AC-34 Админ панель для Connection

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -91,8 +91,15 @@ fos_user:
 
 accelerator_cache:
     host: %domain%
-    web_dir: %kernel.root_dir%/../web    user_class: Araneum\Bundle\UserBundle\Entity\User
-       
+    web_dir: %kernel.root_dir%/../web
+
+sonata_admin:
+    dashboard:
+        groups:
+            Connection:
+                items:
+                    - sonata.admin.connection
+
 sonata_block:
     default_contexts: [cms]
     blocks:
