AC-39 Админ панель для Cluster

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -11,3 +11,12 @@ araneum_locale:
     defaults: {_locale: en}
     requirements:
         _locale: en|ru
+
+admin:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
