--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -89,9 +89,9 @@ fos_user:
     firewall_name: main
     user_class: Araneum\Bundle\UserBundle\Entity\User
 
-accelerator_cache:
-    host: %domain%
-    web_dir: %kernel.root_dir%/../web    user_class: Araneum\Bundle\UserBundle\Entity\User
+#accelerator_cache:
+#    host: %domain%
+#    web_dir: %kernel.root_dir%/../web    user_class: Araneum\Bundle\UserBundle\Entity\User
 
 sonata_block:
     default_contexts: [cms]
