--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -11,3 +11,10 @@ doctrine:
 
 swiftmailer:
     disable_delivery: true
+
+monolog:
+    handlers:
+        main:
+            type:   stream
+            path:   "%kernel.logs_dir%/%kernel.environment%.log"
+            level:  debug
