--- a/src/Araneum/Bundle/MainBundle/Resources/config/services/admin.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/services/admin.yml
@@ -7,3 +7,12 @@ services:
             - ~
             - Araneum\Bundle\MainBundle\Entity\Locale
             - ~
+
+    araneum.main.admin.component:
+        class: Araneum\Bundle\MainBundle\Admin\ComponentAdmin
+        tags:
+            - { name: sonata.admin, manager_type: orm, group: "Components", label: "Component" }
+        arguments:
+            - ~
+            - Araneum\Bundle\MainBundle\Entity\Component
+            - ~
