AC-39 Админ панель для Cluster

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -100,3 +100,6 @@ sonata_block:
         sonata.block.service.connection:
         sonata.block.service.cluster:
 
+accelerator_cache:
+    host: %domain%
+    web_dir: %kernel.root_dir%/../web
