--- a/src/Araneum/Bundle/MainBundle/Resources/config/services/admin.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/services/admin.yml
@@ -34,3 +34,12 @@ services:
             - ~
             - Araneum\Bundle\MainBundle\Entity\Component
             - ~
+
+    sonata.admin.application:
+            class: Araneum\Bundle\MainBundle\Admin\ApplicationAdmin
+            tags:
+                - { name: sonata.admin, manager_type: orm, group: "Application", label: "Application" }
+            arguments:
+                - ~
+                - Araneum\Bundle\MainBundle\Entity\Application
+                - ~
