AC-42 Админ панель для Application

--- a/src/Araneum/Bundle/MainBundle/Resources/config/services/admin.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/services/admin.yml
@@ -42,4 +42,6 @@ services:
             arguments:
                 - ~
                 - Araneum\Bundle\MainBundle\Entity\Application
-                - ~
+                - SonataAdminBundle:CRUD
+            calls:
+                - [setContainer, [@service_container]]
