--- a/src/Araneum/Bundle/MainBundle/Resources/config/admin.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/admin.yml
@@ -2,7 +2,7 @@ services:
     sonata.admin.connection:
         class: Araneum\Bundle\MainBundle\Admin\ConnectionAdmin
         tags:
-            - { name: sonata.admin, manager_type: orm, group: "connection", label: "connection" }
+            - { name: araneum.main.admin.connection, manager_type: orm, group: "connection", label: "connection" }
         arguments:
             - ~
             - Araneum\Bundle\MainBundle\Entity\Connection
