--- a/src/Araneum/Bundle/MainBundle/Resources/config/services/admin.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/services/admin.yml
@@ -2,7 +2,7 @@ services:
     araneum.main.admin.cluster:
         class: Araneum\Bundle\MainBundle\Admin\ClusterAdmin
         tags:
-            - { name: araneum.main.admin.connection, manager_type: orm, group: "Cluster", label: "Cluster" }
+            - { name: sonata.admin, manager_type: orm, group: "Cluster", label: "Cluster" }
         arguments:
             - ~
             - Araneum\Bundle\MainBundle\Entity\Cluster
