--- a/src/Araneum/Bundle/MainBundle/Resources/config/admin.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/admin.yml
@@ -2,7 +2,7 @@ services:
     araneum.main.admin.cluster:
         class: Araneum\Bundle\MainBundle\Admin\ClusterAdmin
         tags:
-            - { name: sonata.admin, manager_type: orm, group: "Cluster", label: "Cluster" }
+            - { name: sonata.admin, manager_type: orm, group: "Main", label: "Cluster" }
         arguments:
             - ~
             - Araneum\Bundle\MainBundle\Entity\Cluster
@@ -11,7 +11,7 @@ services:
     araneum.main.admin.connection:
         class: Araneum\Bundle\MainBundle\Admin\ConnectionAdmin
         tags:
-            - { name: sonata.admin, manager_type: orm, group: "Connection", label: "Connection" }
+            - { name: sonata.admin, manager_type: orm, group: "Main", label: "Connection" }
         arguments:
             - ~
             - Araneum\Bundle\MainBundle\Entity\Connection
@@ -20,7 +20,7 @@ services:
     araneum.main.admin.locale:
         class: Araneum\Bundle\MainBundle\Admin\LocaleAdmin
         tags:
-            - { name: sonata.admin, manager_type: orm, group: "Locale", label: "Locale" }
+            - { name: sonata.admin, manager_type: orm, group: "Main", label: "Locale" }
         arguments:
             - ~
             - Araneum\Bundle\MainBundle\Entity\Locale
@@ -29,7 +29,7 @@ services:
     araneum.main.admin.component:
         class: Araneum\Bundle\MainBundle\Admin\ComponentAdmin
         tags:
-            - { name: sonata.admin, manager_type: orm, group: "Components", label: "Component" }
+            - { name: sonata.admin, manager_type: orm, group: "Main", label: "Component" }
         arguments:
             - ~
             - Araneum\Bundle\MainBundle\Entity\Component
@@ -38,7 +38,7 @@ services:
     araneum.main.admin.application:
             class: Araneum\Bundle\MainBundle\Admin\ApplicationAdmin
             tags:
-                - { name: sonata.admin, manager_type: orm, group: "Application", label: "Application" }
+                - { name: sonata.admin, manager_type: orm, group: "Main", label: "Application" }
             arguments:
                 - ~
                 - Araneum\Bundle\MainBundle\Entity\Application
