--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -45,7 +45,7 @@ twig:
 # Assetic Configuration
 assetic:
     debug:          "%kernel.debug%"
-    use_controller: false
+    use_controller: true
     bundles:        [ ]
     #java: /usr/bin/java
     filters:
