AC-62 Кастомизировать страницу логина

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -46,7 +46,7 @@ twig:
 assetic:
     debug:          "%kernel.debug%"
     use_controller: true
-    bundles:        [ ]
+    bundles:        [FOSUserBundle]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
