--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -111,3 +111,8 @@ fos_rest:
         default_format: json
 
 nelmio_api_doc: ~
+
+lexik_maintenance:
+    driver:
+        class: '\Lexik\Bundle\MaintenanceBundle\Drivers\FileDriver' # class for file driver
+        options: {file_path: %kernel.root_dir%/cache/lock}          # file_path is the complete path for create the file
