--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "smart-core/accelerator-cache-bundle": "^1.0",
         "friendsofsymfony/rest-bundle": "^1.7",
         "nelmio/api-doc-bundle": "^2.9",
-        "jms/serializer-bundle": "^1.0"
+        "jms/serializer-bundle": "^1.0",
+        "lexik/maintenance-bundle": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
