--- a/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
@@ -1,1 +1,7 @@
+parameters:
+    araneum.main.application.class: Araneum\Bundle\MainBundle\Entity\Application
+
 services:
+    araneum.main.handler.application:
+        class: Araneum\Bundle\MainBundle\Handler\ApplicationHandler
+        arguments: [@doctrine.orm.entity_manager, %araneum.main.application.class%]
