--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,7 +4,7 @@ security:
 
     role_hierarchy:
             ROLE_ADMIN: [ROLE_USER, ROLE_SONATA_ADMIN]
-            ROLE_SUPER_ADMIN: ROLE_ADMIN
+            ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_API]
 
     providers:
         fos_userbundle:
@@ -35,4 +35,4 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/[a-zA-Z]+/admin/, role: ROLE_ADMIN }
-        - { path: ^/api, role: ROLE_ADMIN }
+        - { path: ^/api, role: ROLE_API }
