--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -116,3 +116,32 @@ lexik_maintenance:
     driver:
         class: '\Lexik\Bundle\MaintenanceBundle\Drivers\FileDriver' # class for file driver
         options: {file_path: %kernel.root_dir%/cache/lock}          # file_path is the complete path for create the file
+
+old_sound_rabbit_mq:
+    connections:
+        default:
+            host:     'localhost'
+            port:     5672
+            user:     'guest'
+            password: 'guest'
+            vhost:    '/'
+            lazy:     false
+            connection_timeout: 3
+            read_write_timeout: 3
+
+            # requires php-amqplib v2.4.1+ and PHP5.4+
+            keepalive: false
+
+            # requires php-amqplib v2.4.1+
+            heartbeat: 0
+    producers:
+        upload_picture:
+            class:            My\Custom\Class
+            connection:       default
+            exchange_options: {name: 'upload-picture', type: direct}
+    consumers:
+        upload_picture:
+            connection:       default
+            exchange_options: {name: 'upload-picture', type: direct}
+            queue_options:    {name: 'upload-picture'}
+            callback:         upload_picture_service
