--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "friendsofsymfony/rest-bundle": "^1.7",
         "nelmio/api-doc-bundle": "^2.9",
         "jms/serializer-bundle": "^1.0",
-        "lexik/maintenance-bundle": "^1.0"
+        "lexik/maintenance-bundle": "^1.0",
+        "snc/redis-bundle": "1.1.x-dev",
+        "predis/predis": "1.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
