--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -109,6 +109,8 @@ accelerator_cache:
 fos_rest:
     routing_loader:
         default_format: json
+    view:
+        view_response_listener: true
 
 nelmio_api_doc: ~
 
