--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+araneum_customer:
+    resource: "@AraneumCustomerBundle/Resources/config/routing.yml"
+    prefix:   /
+
 araneum_root:
     path: /
     defaults:
