--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -75,8 +75,6 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
-        metadata_cache_driver: redis
-        query_cache_driver: redis
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -121,12 +119,12 @@ lexik_maintenance:
 old_sound_rabbit_mq:
     connections:
         default:
-            host:     'localhost'
+            host:     192.168.70.137
             port:     5672
-            user:     'guest'
-            password: 'guest'
+            user:     'core_araneum'
+            password: 'core_araneum'
             vhost:    '/'
-            lazy:     false
+            lazy:     true
             connection_timeout: 3
             read_write_timeout: 3
 
@@ -136,16 +134,15 @@ old_sound_rabbit_mq:
             # requires php-amqplib v2.4.1+
             heartbeat: 0
     producers:
-        upload_picture:
-            class:            My\Custom\Class
+        sample:
             connection:       default
-            exchange_options: {name: 'upload-picture', type: direct}
+            exchange_options: {name: 'sample_exchange', type: direct, auto_delete: false, durable: true}
     consumers:
-        upload_picture:
+        sample:
             connection:       default
-            exchange_options: {name: 'upload-picture', type: direct}
-            queue_options:    {name: 'upload-picture'}
-            callback:         upload_picture_service
+            exchange_options: {name: 'sample_exchange', type: direct}
+            queue_options:    {name: 'sample', auto_delete: false}
+            callback:         rabbit.callback.service
 
 snc_redis:
     clients:
