AC-68 Реализовать API метод получени конфигурации Application. Test checked

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -21,7 +21,8 @@ _knp_rad_assistant:
     resource: "@KnpRadBundle/Resources/config/routing/assistant.xml"
     prefix: /_assistant
 
-api:
-    resource: '@AraneumMainBundle/Controller/ApplicationApiController.php'
-    type: rest
+araneum_main_api:
+    resource: "@AraneumMainBundle/Controller/Api"
+    type:     annotation
+    prefix:   /api/main
     defaults: {_format: json}
