AC-76 Настроить и кастомизировать сброс пароля пользователя / Need to configure and customize the...

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -45,8 +45,7 @@ twig:
 # Assetic Configuration
 assetic:
     debug:          "%kernel.debug%"
-    use_controller: false
-    bundles:        [ ]
+    use_controller: true
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
