AC-81 Подключить бандл RabbitMQ / Need to connect RabbitMQ bundle

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,5 +4,6 @@ parameters:
 #    parameter_name: value
 
 services:
-  rabbit.callback.service:
-    class: Araneum\Bundle\MainBundle\RabbitMQ\Callback\Service
+#    service_name:
+#        class: AppBundle\Directory\ClassName
+#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
