--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -22,3 +22,8 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    rabbitmq_host: 'localhost'
+    rabbitmq_port: 5672
+    rabbitmq_user: 'admin'
+    rabbitmq_password: '12345'
