--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -63,6 +63,8 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        metadata_cache_driver: redis
+        query_cache_driver: redis
 
 # Swiftmailer Configuration
 swiftmailer:
