AC-82 Перевести сессии на Redis

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -144,8 +144,10 @@ snc_redis:
     doctrine:
         metadata_cache:
             client: cache
+            prefix: metadata_%session_prefix%
             entity_manager: default          # the name of your entity_manager connection
             document_manager: default        # the name of your document_manager connection
         query_cache:
             client: cache
+            prefix: query_%session_prefix%
             entity_manager: default
