Вернул файлы из AC-62  Включил отправку почты.

--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -10,7 +10,7 @@ doctrine:
        logging: "%kernel.debug%"
 
 swiftmailer:
-    disable_delivery: true
+    disable_delivery: false
 
 monolog:
     handlers:
