--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -4,7 +4,8 @@ imports:
 framework:
     profiler: { only_exceptions: false }
     test: ~
-
+    session:
+        storage_id: session.storage.mock_file
 doctrine:
    dbal:
        logging: "%kernel.debug%"
