--- a/src/Araneum/Bundle/CustomerBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/CustomerBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    araneum_customer.example:
-#        class: Araneum\Bundle\CustomerBundle\Example
-#        arguments: [@service_id, "plain_value", %parameter%]
+  araneum.customer.handler:
+    class: Araneum\Bundle\CustomerBundle\Handler\CustomerHandler
+    arguments: [@doctrine.orm.entity_manager, @araneum.main.service.application]
