AC-119 Create API (GET) method which will return list of cluster projects

--- a/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
@@ -2,3 +2,7 @@ services:
     araneum.main.handler.application:
         class: Araneum\Bundle\MainBundle\Handler\ApplicationHandler
         arguments: [@doctrine.orm.entity_manager, Araneum\Bundle\MainBundle\Entity\Application]
+
+    araneum.main.handler.cluster:
+            class: Araneum\Bundle\MainBundle\Handler\ClusterHandler
+            arguments: [@doctrine.orm.entity_manager, Araneum\Bundle\MainBundle\Entity\Cluster]
