--- a/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
@@ -2,6 +2,6 @@ services:
     araneum.main.handler.application:
         class: Araneum\Bundle\MainBundle\Handler\ApplicationHandler
         arguments: [@doctrine.orm.entity_manager, Araneum\Bundle\MainBundle\Entity\Application]
-    araneum.main.service.api.application:
-        class: Araneum\Bundle\MainBundle\Service\ApiApplicationManager
+    araneum.main.service.remote.application:
+        class: Araneum\Bundle\MainBundle\Service\RemoteApplicationManager
         arguments: [@doctrine.orm.entity_manager]
