--- a/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
@@ -1,8 +1,8 @@
 services:
-    araneum.main.handler.application:
-        class: Araneum\Bundle\MainBundle\Handler\ApplicationHandler
+    araneum.main.application.handler:
+        class: Araneum\Bundle\MainBundle\Service\ApplicationHandlerService
         arguments: [@doctrine.orm.entity_manager, Araneum\Bundle\MainBundle\Entity\Application]
 
-    araneum.main.handler.cluster:
-            class: Araneum\Bundle\MainBundle\Handler\ClusterHandler
+    araneum.main.cluster.handler:
+            class: Araneum\Bundle\MainBundle\Service\ClusterHandlerService
             arguments: [@doctrine.orm.entity_manager, Araneum\Bundle\MainBundle\Entity\Cluster]
