--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -24,11 +24,11 @@ _knp_rad_assistant:
 araneum_main_api:
     resource: "@AraneumMainBundle/Controller/Api"
     type: annotation
-    prefix: /api
-    defaults: {_format: json}
+    prefix: /{_locale}/api
+    defaults: {_format: json, _locale: en}
 
 araneum_customers_api:
     resource: "@AraneumCustomerBundle/Controller"
     type:     annotation
-    prefix:   /api
-    defaults: {_format: json}
+    prefix:   /{_locale}/api
+    defaults: {_format: json, _locale: en}
