--- a/src/Araneum/Bundle/CustomerBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/CustomerBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-  araneum.customer.api.handler:
-    class: Araneum\Bundle\CustomerBundle\Service\CustomerApiHandler
-    arguments: [@doctrine.orm.entity_manager, @araneum.main.service.application]
+  araneum.customer.customer.api_handler:
+    class: Araneum\Bundle\CustomerBundle\Service\CustomerApiHandlerService
+    arguments: [@doctrine.orm.entity_manager, @araneum.main.application_manager]
