--- a/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
@@ -3,6 +3,6 @@ services:
         class: Araneum\Bundle\MainBundle\Handler\ApplicationHandler
         arguments: [@doctrine.orm.entity_manager, Araneum\Bundle\MainBundle\Entity\Application]
 
-    araneum.main.service.remote.application:
-        class: Araneum\Bundle\MainBundle\Service\RemoteApplicationManager
+    araneum.main.service.remote_application_manager_service:
+        class: Araneum\Bundle\MainBundle\Service\RemoteApplicationManagerService
         arguments: [@doctrine.orm.entity_manager]
