AC-85 API метод получения данных регистрации от Application (Customer) / API method for obtaining...

--- a/src/Araneum/Bundle/CustomerBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/CustomerBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
   araneum.customer.customer.api_handler:
     class: Araneum\Bundle\CustomerBundle\Service\CustomerApiHandlerService
-    arguments: [@doctrine.orm.entity_manager, @araneum.main.application_manager]
+    arguments: [@doctrine.orm.entity_manager, @araneum.main.service.application_manager]
