AC-80 API метод получения почты от Application / API method of receiving mail from the Application

--- a/app/config/routing_with_locale.yml
+++ b/app/config/routing_with_locale.yml
@@ -8,6 +8,12 @@ araneum_main:
     type:     annotation
     prefix:   /
 
+araneum_mail:
+    resource: "@AraneumMailBundle/Controller"
+    type: annotation
+    prefix: /mail
+    defaults: {_format: json}
+
 admin:
     resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
     prefix: /admin
