AC-85 API метод получения данных регистрации от Application (Customer) / API method for obtaining...

--- a/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
@@ -3,6 +3,6 @@ services:
         class: Araneum\Bundle\MainBundle\Handler\ApplicationHandler
         arguments: [@doctrine.orm.entity_manager, Araneum\Bundle\MainBundle\Entity\Application]
 
-    araneum.main.service.application_manager:
+    araneum.main.application_manager:
         class: Araneum\Bundle\MainBundle\Service\ApplicationManagerService
         arguments: [@doctrine.orm.entity_manager]
