--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -136,3 +136,11 @@ snc_redis:
         client: session
         prefix: %session_prefix%
         ttl: 1200
+
+guzzle:
+    clients:
+        api:
+            headers:
+                Accept: "application/json"
+            options:
+                timeout: 30
