--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -88,6 +88,8 @@ sonata_block:
     blocks:
         sonata.admin.block.admin_list:
             contexts:   [admin]
+        sonata.admin.block.search_result:
+            contexts:   [admin]
 
 accelerator_cache:
     host: %domain%
