AC-85 API метод получения данных регистрации от Application (Customer) / API method for obtaining...

--- a/app/config/routing_with_locale.yml
+++ b/app/config/routing_with_locale.yml
@@ -7,6 +7,7 @@ araneum_main:
     resource: "@AraneumMainBundle/Controller/"
     type:     annotation
     prefix:   /
+    defaults: {_format: json}
 
 admin:
     resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
