--- a/app/config/routing_with_locale.yml
+++ b/app/config/routing_with_locale.yml
@@ -7,7 +7,11 @@ araneum_main:
     resource: "@AraneumMainBundle/Controller/"
     type:     annotation
     prefix:   /
-    defaults: {_format: json}
+
+araneum_customers:
+    resource: "@AraneumCustomerBundle/Controller"
+    type:     annotation
+    prefix:   /
 
 admin:
     resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
@@ -32,8 +36,3 @@ fos_user_resetting:
 fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
-
-araneum_customers_api:
-    resource: "@AraneumCustomerBundle/Controller"
-    type:     annotation
-    defaults: {_format: json}
