--- a/src/Araneum/Bundle/CustomerBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/CustomerBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
   araneum.customer.customer.api_handler:
     class: Araneum\Bundle\CustomerBundle\Service\CustomerApiHandlerService
-    arguments: [@doctrine.orm.entity_manager, @araneum.main.application_manager, @form.factory]
+    arguments: [@doctrine.orm.entity_manager, @araneum.main.application.manager, @form.factory]
