--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -82,6 +82,9 @@ fos_user:
 sonata_admin:
     title:      Araneum Core
     title_logo: logo_title.png
+    dashboard:
+        blocks:
+            - { position: top, type: sonata.admin.block.admin_list, class: mmm }
 
 sonata_block:
     default_contexts: [cms]
