AC-80 API метод получения почты от Application / API method of receiving mail from the Application правки после теста

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -12,7 +12,7 @@ security:
 
     firewalls:
         api:
-            pattern: ^/api
+            pattern: ^/.*/api
             anonymous: ~
             http_basic:
                 realm: "Araneum.Core API secure"
@@ -35,4 +35,4 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/[a-zA-Z]+/admin/, role: ROLE_ADMIN }
-        - { path: ^/api, role: ROLE_API }
+        - { path: ^/.*/api, role: ROLE_API }
