AC-140 Customize admin dashboard

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -84,7 +84,7 @@ sonata_admin:
     title_logo: logo_title.png
     dashboard:
         blocks:
-        - { position: top, type: sonata.admin.block.admin_list, class: "col-md-4" }
+        - { position: top, type: sonata.admin.block.admin_list }
 
 sonata_block:
     default_contexts: [cms]
